--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,20 @@ a {
   color: inherit; 
 }
 
+.theme{
+  transition: 1s all ease;
+}
+
+.light {
+  background-color: rgb(228, 222, 222);
+  color: #111;
+}
+
+.dark {
+  background-color: #111;
+  color: #bbb;
+}
+
 .container {
   max-width: 1366px;
   min-height: 100vh;
