--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,9 +1,9 @@
 .container {
- display: flex;
- align-items: center;
- gap: 100px;
- margin-left: 10px; 
- margin-right: 10px; 
+  display: flex;
+  align-items: center;
+  gap: 100px;
+  margin-left: 10px; 
+  margin-right: 10px; 
 }
 
 .item {
@@ -16,7 +16,7 @@
 .title{
   font-size: 70px;
   margin-left: 10px;
-  background: linear-gradient(to bottom, #194c33, #bbb );
+  background: linear-gradient(to bottom, #ff3058, #ff6e8a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -27,7 +27,7 @@
   margin-top: 20px;
   object-fit: cover;
   object-fit: contain;
-  animation: move 2s infinite ease alternate;
+  animation: move 3s infinite ease alternate;
 }
 
 @keyframes move {
@@ -39,6 +39,6 @@
 .desc{
   margin-left: 10px;
   font-size: 20px;
-  font-weight: 250;
+  font-weight: 350;
 }
 
