--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -2,7 +2,7 @@
   padding: 20px;
   margin-left: 250px;
   cursor: pointer;
-  background-color: rgb(208, 17, 17);
+  background-color: #ff3058;
   border: none;
   border-radius: 5px;
   width: max-content;
