--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #01161e;
+  background-color: #f2f6f7;
   color: #f5f1f1;
 }
 
