--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -1,11 +1,10 @@
-.container {
-    
-}
+
 
 .imgContainer{
     width: 100%;
     height: 100px;
     position: relative;
+
 } 
 
 .img{
@@ -14,15 +13,16 @@
     height: 300px;
     margin-top: 5px;
     filter: grayscale(100%);
+
 }
 
 .imgText{
     position: absolute;
     top: 180px;
-    left: 45px;
+    left: 40px;
     padding: 30px;
     color: #ff3058;
-    font-size: large;
+    font-size: xx-large;
 }
 
 .textContainer{
@@ -34,11 +34,12 @@
 
 .imgDesc{
 font-size: xx-large;
-padding-top:7px ;
-padding-bottom: 10px;
-margin-left: 80px;
-margin-right: 100px;
-color: #ff3058;
+text-align: center;
+color: #ff839b;
+}
+
+.title{
+    text-align: center;
 }
 
 .item{
@@ -48,6 +49,7 @@ color: #ff3058;
     flex-direction: column;
     gap: 30px;
 }
+
 
 .desc{
     font-size: 18px;
