--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -5,4 +5,20 @@
   display: flex;
   align-items: center;
   justify-content: space-between ;
+  background-color: #4c0e1a;
+}
+
+.row {
+  margin-bottom: 10px;
+}
+
+.socialIcons {
+  font-size: 24px;
+  margin-top: 10px;
+}
+
+.socialIcons a {
+  margin-right: 10px;
+  color: #333;
+  text-decoration: none;
 }
