--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -56,3 +56,11 @@ color: #ff839b;
     font-weight: 350;
     text-align: justify;
 }
+
+.element{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 200px;
+    
+}
