--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,9 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between ;
-  background-color: #330a12;
+  background-color: #80182c;
   border-radius: 20px 20px 0px 0px;  
-
 }
 
 .linkGrid {
