--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
  box-sizing: border-box;
  padding: 0;
  margin: 0;
+ font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+:root{
+  --primary : #ff3058;
 }
 
 html,
@@ -29,6 +34,7 @@ a {
 .dark {
   background-color: #111;
   color: #bbb;
+  
 }
 
 .container {
