--- a/src/app/courses/page.module.css
+++ b/src/app/courses/page.module.css
@@ -7,13 +7,34 @@
 }
 
 .image {
-    object-fit: cover;
+    object-fit: contain;
 }
 
 
-.content {
-
+.mainTitle {
+    font-size: 65px;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    /*  initial color */
+    color: #ff3058;
+    /* Use animation for color transition */
+    animation: colorTransition 3s infinite linear;
 }
+
+/* Define the color transition animation */
+@keyframes colorTransition {
+    0% {
+        color: white ;
+    }
+    50% {
+        color: #ff5979 ;
+    }
+    100% {
+        color: #ff3058 ;
+    }
+}
+
 
 .title{
     margin-bottom: 10px;
