--- a/src/app/centres/page.module.css
+++ b/src/app/centres/page.module.css
@@ -9,6 +9,7 @@
         margin-left: 440px;
         margin-bottom: 50px;
         font-size: 40px;
+        color: #ff5979;
     }
     
     .items{
