--- a/src/app/centres/page.module.css
+++ b/src/app/centres/page.module.css
@@ -1,15 +1,34 @@
-.mainTitle{
-    font-size: 100px;
-    margin-left: 360px;
-    margin-top: 20px;
+
+.mainTitle {
+    font-size: 65px;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    /*  initial color */
+    color: #ff3058;
+    /* Use animation for color transition */
+    animation: colorTransition 3s infinite linear;
+}
+
+/* Define the color transition animation */
+@keyframes colorTransition {
+    0% {
+        color: white ;
     }
+    50% {
+        color: #ff5979 ;
+    }
+    100% {
+        color: #ff3058 ;
+    }
+}
     
     .selectTitle {
-        margin: 20px 0px;
-        margin-left: 440px;
+        /* margin: 20px 0px; */
+        /* margin-left: 440px; */
         margin-bottom: 50px;
         font-size: 40px;
-        color: #ff5979;
+        text-align: center;
     }
     
     .items{
