--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -60,7 +60,7 @@
   }
   
   .form {
-    flex: 1; /* Allow the form to grow and occupy available space */
+    flex: 1; 
     display: flex;
     flex-direction: column;
     align-items: flex-start;
