--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -4,19 +4,26 @@
     justify-content: space-between;
     align-items: center;
     /* padding: 0 60px; */
-    padding-bottom: 0 100px;
+    padding-bottom: 0 20px;
 }
 
 .logo {
     font-weight: bold;
-    font-size: 22px;
+    font-size: 18px;
+    text-decoration: none;
+    color: #000;
 }
 
 .links{
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     font-weight: 600;
+}
+
+.links a {
+    text-decoration: none;
+    color: #f9f7f7; /* Set your default link color */
 }
 
 .links :hover {
@@ -24,4 +31,21 @@
     text-decoration: underline;
     text-underline-offset:5px;
 
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: flex-start;
+        height: auto;
+    }
+
+    .logo {
+        margin-bottom: 10px;
+    }
+
+    .links {
+        flex-direction: column;
+        gap: 8px;
+    }
 }
