--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -17,7 +17,7 @@
 .links{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 25px;
     font-weight: 600;
 }
 
@@ -33,11 +33,12 @@
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
     .container {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         height: auto;
+        gap: 10px;
     }
 
     .logo {
