--- a/src/components/detail/detail.module.css
+++ b/src/components/detail/detail.module.css
@@ -1,23 +1,47 @@
 .container {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-    overflow: hidden;
-    position: relative;
-  }
-  
+  max-width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.imageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 60vh; /* Set the desired max-height for the container */
+}
+
+.image {
+  border: 10px solid #fff;
+  box-shadow: 0 2px 5px #aaa;
+  transition: transform 0.5s;
+  max-width: 100%;
+  height: auto;
+  max-height: 100%; /* Ensure the image does not exceed the container's height */
+}
+
+.thumbnails {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.thumbnails img {
+  margin: 0 5px;
+  cursor: pointer;
+  max-width: 100%; /* Ensure thumbnails are responsive */
+  height: auto;
+}
+
+@media only screen and (max-width: 600px) {
   .imageContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height:600px; /* Set the desired height for the container */
+    max-height: 40vh; /* Adjust the max-height for smaller screens */
   }
-  
-  .image {
-    border: 10px solid #fff;
-    box-shadow: 0 2px 5px #aaa;
-    transition: transform 0.5s;
+
+  .thumbnails {
+    justify-content: space-between;
   }
-  
-  /* Rest of your CSS remains the same */
-  
+}
