--- a/src/app/courses/page.module.css
+++ b/src/app/courses/page.module.css
@@ -1,9 +1,11 @@
+
 .container{
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 50px;
     margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 .image {
