--- a/src/app/centres/page.module.css
+++ b/src/app/centres/page.module.css
@@ -47,7 +47,10 @@ color: #000;
     margin: 0 0 20px 0;
 }
 .item:hover{
-    transform: translate3d(0,-1px,0) scale(1.1);
+    transform: translate3d(0,-1px,0) scale(1.05);
+}
+.item1:hover{
+    transform: translate3d(0,-1px,0) scale(1.05);
 }
 
 .item:nth-child(1) {
