--- a/src/app/gallery/page.module.css
+++ b/src/app/gallery/page.module.css
@@ -29,7 +29,7 @@
     margin-top: 40px; /* Adjust margin as needed */
 }
 
-.item, .item1, .item2 {
+.item, .item1, .item2, .item3, .item4 {
     border: 3px solid #bbb;
     border-radius: 10px;
     height: 400px;
@@ -39,6 +39,15 @@
 .item {
     width: 100%;
     margin-bottom: 20px;
+}
+.item:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
+.item1:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
+.item2:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
 }
 
 .item1, .item2 {
@@ -56,6 +65,30 @@
 
 .item:nth-child(3) {
     background: url("/Choose3.jpg") center/cover;
+}
+
+.item1:nth-child(1) {
+    background: url("/Choose4.jpg") center/cover;
+}
+
+.item1:nth-child(2) {
+    background: url("/Choose5.jpg") center/cover;
+}
+
+.item1:nth-child(3) {
+    background: url("/Choose6.jpg") center/cover;
+}
+
+.item1:nth-child(1) {
+    background: url("/Choose4.jpg") center/cover;
+}
+
+.item1:nth-child(2) {
+    background: url("/Choose5.jpg") center/cover;
+}
+
+.item1:nth-child(3) {
+    background: url("/Choose6.jpg") center/cover;
 }
 
 .item1:nth-child(1) {
@@ -93,7 +126,7 @@
         margin-top: 0;
     }
 
-    .item, .item1, .item2 {
+    .item, .item1, .item2, .item3 , .item4 {
         width: 45%; /* Adjust the percentage as needed */
         margin: 0 2.5%;
     }
@@ -105,7 +138,7 @@
         font-size: 5rem;
     }
 
-    .item, .item1, .item2 {
+    .item, .item1, .item2, .item3 , .item4 {
         width: 30%; /* Adjust the percentage as needed */
         margin: 0 1.5%;
     }
