--- a/src/app/gallery/page.module.css
+++ b/src/app/gallery/page.module.css
@@ -21,7 +21,7 @@
         color: #ff3058 ;
     }
 }
-.items, .items2 {
+.items, .items2, .items3, .items4, .items5, .items6, .items7, .items8, .items9, .items10 {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -29,7 +29,7 @@
     margin-top: 40px; /* Adjust margin as needed */
 }
 
-.item, .item1, .item2, .item3, .item4 {
+.item, .item1, .item2, .item3, .item4, .item5, .item6, .item7, .item8, .item9 {
     border: 3px solid #bbb;
     border-radius: 10px;
     height: 400px;
@@ -49,8 +49,31 @@
 .item2:hover{
     transform: translate3d(0,-1px,0) scale(1.1);
 }
+.item3:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
+.item4:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
+.item5:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
+.item6:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
+.item7:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
+.item8:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
+.item9:hover{
+    transform: translate3d(0,-1px,0) scale(1.1);
+}
 
-.item1, .item2 {
+
+
+.item1, .item2, .item3, .item4, .item5, .item6, .item7, .item8, .item9 {
     width: 100%;
     margin-bottom: 30px;
 }
@@ -79,30 +102,6 @@
     background: url("/Choose6.jpg") center/cover;
 }
 
-.item1:nth-child(1) {
-    background: url("/Choose4.jpg") center/cover;
-}
-
-.item1:nth-child(2) {
-    background: url("/Choose5.jpg") center/cover;
-}
-
-.item1:nth-child(3) {
-    background: url("/Choose6.jpg") center/cover;
-}
-
-.item1:nth-child(1) {
-    background: url("/Choose4.jpg") center/cover;
-}
-
-.item1:nth-child(2) {
-    background: url("/Choose5.jpg") center/cover;
-}
-
-.item1:nth-child(3) {
-    background: url("/Choose6.jpg") center/cover;
-}
-
 .item2:nth-child(1) {
     background: url("/Choose7.jpg") center/cover;
 }
@@ -115,18 +114,100 @@
     background: url("/Choose9.jpg") center/cover;
 }
 
+.item3:nth-child(1) {
+    background: url("/Choose10.jpg") center/cover;
+}
+
+.item3:nth-child(2) {
+    background: url("/Choose11.jpg") center/cover;
+}
+
+.item3:nth-child(3) {
+    background: url("/Choose12.jpg") center/cover;
+}
+
+.item4:nth-child(1) {
+    background: url("/Choose13.jpg") center/cover;
+}
+
+.item4:nth-child(2) {
+    background: url("/Choose14.jpg") center/cover;
+}
+
+.item4:nth-child(3) {
+    background: url("/Choose15.jpg") center/cover;
+}
+
+.item5:nth-child(1) {
+    background: url("/Choose16.jpg") center/cover;
+}
+
+.item5:nth-child(2) {
+    background: url("/Choose17.jpg") center/cover;
+}
+
+.item5:nth-child(3) {
+    background: url("/Choose18.jpg") center/cover;
+}
+
+.item6:nth-child(1) {
+    background: url("/Choose19.jpg") center/cover;
+}
+
+.item6:nth-child(2) {
+    background: url("/Choose20.jpg") center/cover;
+}
+
+.item6:nth-child(3) {
+    background: url("/Choose21.jpg") center/cover;
+}
+
+.item7:nth-child(1) {
+    background: url("/Choose22.jpg") center/cover;
+}
+
+.item7:nth-child(2) {
+    background: url("/Choose23.jpg") center/cover;
+}
+
+.item7:nth-child(3) {
+    background: url("/Choose24.jpg") center/cover;
+}
+.item8:nth-child(1) {
+    background: url("/Choose25.jpg") center/cover;
+}
+
+.item8:nth-child(2) {
+    background: url("/Choose26.jpg") center/cover;
+}
+
+.item8:nth-child(3) {
+    background: url("/Choose27.jpg") center/cover;
+}
+.item9:nth-child(1) {
+    background: url("/Choose28.jpg") center/cover;
+}
+
+.item9:nth-child(2) {
+    background: url("/Choose29.jpg") center/cover;
+}
+
+.item9:nth-child(3) {
+    background: url("/Choose30.jpg") center/cover;
+}
+
 /* Media Query for Tablets and Larger Screens */
 @media (min-width: 600px) {
     .mainTitle {
         font-size: 4rem;
     }
 
-    .items, .items2 {
+    .items, .items2, .items3, .items4, .items5, .items6, .items7, .items8, .items9, .items10 {
         flex-direction: row;
         margin-top: 0;
     }
 
-    .item, .item1, .item2, .item3 , .item4 {
+    .item, .item1, .item2, .item3 , .item4, .item5, .item6, .item7, .item8, .item9 {
         width: 45%; /* Adjust the percentage as needed */
         margin: 0 2.5%;
     }
@@ -138,7 +219,7 @@
         font-size: 5rem;
     }
 
-    .item, .item1, .item2, .item3 , .item4 {
+    .item, .item1, .item2, .item3 , .item4, .item5, .item6, .item7, .item8, .item9 {
         width: 30%; /* Adjust the percentage as needed */
         margin: 0 1.5%;
     }
