--- a/src/app/gallery/page.module.css
+++ b/src/app/gallery/page.module.css
@@ -79,7 +79,7 @@
 }
 
 .item:nth-child(1) {
-    background: url("/Choose1.jpg") center/cover;
+    background: url("/ruchin.jpg") center/cover;
 }
 
 .item:nth-child(2) {
