--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -32,10 +32,18 @@
 @media only screen and (max-width: 600px) {
   .container {
       height:fit-content;
+      /* width: fit-content; */
       flex-direction: column;
-      align-items: flex-start;
+      /* display: flex; */
+      align-items:flex-center;
   }
 
+  /* .logoContainer{ */
+    /* position: static; */
+    /* height: 10px; */
+    /* width: 10px; */
+    /* size: 10px; */
+  /* } */
   .linkGrid {
       margin-bottom: 20px;
       gap: 5px;
