--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -37,6 +37,8 @@
         align-items: center;
         height: auto;
         gap: 10px;
+        padding-top:10px ;
+        padding-bottom: 0px;
     }
 
     .logo {
