--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 20px; /* Corrected padding declaration */
+    padding-bottom: 8px; /* Corrected padding declaration */
 }
 
 .logo {
@@ -53,6 +53,7 @@
         display: flex;
         flex-direction: column;
         cursor: pointer;
+        margin-left: 310px;
     }
 
     .bar {
@@ -74,7 +75,7 @@
         top: 80px;
         left: 0;
         width: 100%;
-        background-color: #fff; /* Set your background color */
+        background-color: #fff;
         padding: 10px;
         box-shadow: 0px 4px 6px rgba(245, 241, 241, 0.1);
     }
