--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -34,11 +34,20 @@
 @media screen and (max-width: 600px) {
     .container {
         flex-direction: column;
-        align-items: center;
+        /* justify-content: space-between; */
+        /* align-items: center; */
         height: auto;
         gap: 10px;
         padding-top:10px ;
         padding-bottom: 0px;
+    }
+
+    .logobar{
+flex-direction: row;
+justify-content: space-between;
+display: flex;
+width: 100%;
+align-items: center;
     }
 
     .logo {
@@ -48,6 +57,8 @@
     .links {
         flex-direction: column;
         gap: 10px;
+        width: 100%;
+        align-items: center;
     }
 
     /* New styles for mobile menu */
