--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,6 +1,6 @@
 .container {
     height: 120px;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -47,7 +47,7 @@
 flex-direction: row;
 justify-content: space-between;
 display: flex;
-width: 100%;
+/* width: 100%; */
 align-items: center;
     }
 
