--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -31,19 +31,13 @@
 /* Responsive styles for smaller screens */
 @media only screen and (max-width: 600px) {
   .container {
-      height:fit-content;
-      /* width: fit-content; */
-      flex-direction: column;
-      /* display: flex; */
-      align-items:flex-start;
+    height: auto; 
+    width: 112%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
   }
 
-  /* .logoContainer{ */
-    /* position: static; */
-    /* height: 10px; */
-    /* width: 10px; */
-    /* size: 10px; */
-  /* } */
   
   .linkGrid {
       margin-bottom: 20px;
